# serverless-fastapi-rds-template

./: README.md
serverless/: .env.sample  .gitignore  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  serverless.yml
serverless/app/: database.py  db.py  exceptions.py  log.py  main.py  middlewares.py  migrate_db.py  routes.py
serverless/app/api/: __init__.py  main.py
serverless/app/api/routers/: done.py  items.py  root.py  task.py
serverless/app/api/tasks/: schemas.py  use_case.py  views.py
serverless/app/api/tasks/done/: schemas.py  use_case.py  views.py
serverless/app/core/: config.py
serverless/app/cruds/: done.py  task.py
serverless/app/models/: __init__.py  base.py  task.py
serverless/app/repositories/: __init__.py  base.py  done.py  task.py
serverless/app/routes/: items.py
serverless/app/schemas/: base.py  done.py  task.py
serverless/app/tests/: conftest.py
serverless/app/tests/api/routes/: test_items.py
serverless/app/utils/: datetime.py
serverless/config/: iam-role-statements.yml
serverless/config/stages-sample/: common.yml  dev.yml  prd.yml
serverless/data/sql/setup/: create_tables.sql
serverless/db-backup/: serverless.yml
serverless/db-backup/docker/: Dockerfile
serverless/db-backup/docker/app/: db_backup_handler.py
serverless/develop/: docker_mysql_run.sh  env.sh.sample
serverless/tests/: conftest.py
serverless/tests/api/tasks/: test_views.py
terraform/: .gitignore  main.tf  terraform.tfvars.sample
terraform/functions/src/: test-event.json
terraform/modules/aws/ec2/: main.tf  (+1 more)
(+6 files in other folders)
