[project]
name = "serverless-fastapi-rds-template"
version = "0.1.0"
description = "Project template for using FastAPI, DB and deploying by Terraform and Serveless"
authors = [
    {name = "Shingo Yamada",email = "uzuranoie@gmail.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.3"
httpx = "^0.28.1"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
aiosqlite = "^0.21.0"
